add missing release files

--- a/CustomElementHandler/CustomElementHandler.csproj
+++ b/CustomElementHandler/CustomElementHandler.csproj
@@ -44,6 +44,9 @@
     <Compile Include="SaveHandler.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="manifest.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
