--- a/CustomFarming/CustomFarming.csproj
+++ b/CustomFarming/CustomFarming.csproj
@@ -50,6 +50,9 @@
     <Compile Include="simpleMachine.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="manifest.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
