--- a/Portraiture/manifest.json
+++ b/Portraiture/manifest.json
@@ -4,10 +4,10 @@
    "Version": {
       "MajorVersion": 1,
       "MinorVersion": 0,
-      "PatchVersion": 1,
+      "PatchVersion": 2,
       "Build": ""
    },
-   "Description": "Helper Mod for Portraits. For SDV 1.2 beta.",
+   "Description": "Helper Mod for Portraits. For SDV 1.11.",
    "UniqueID": "Platonymous.Portraiture",
    "EntryDll": "Portraiture.dll"
 }
