--- a/JunimoFarm/manifest.json
+++ b/JunimoFarm/manifest.json
@@ -4,10 +4,10 @@
    "Version": {
       "MajorVersion": 1,
       "MinorVersion": 1,
-      "PatchVersion": 0,
+      "PatchVersion": 1,
       "Build": ""
    },
-   "Description": "Let Junimos help you on the farm. For SDV 1.11",
+   "Description": "Let Junimos help you on the farm.",
    "UniqueID": "Platonymous.JunimoFarm",
    "EntryDll": "JunimoFarm.dll"
 }
