--- a/CustomFarming/manifest.json
+++ b/CustomFarming/manifest.json
@@ -7,7 +7,7 @@
       "PatchVersion": 0,
       "Build": ""
    },
-   "Description": "Helper Mod for Custom Object creation. For SDV 1.11",
+   "Description": "Helper Mod for Custom Object creation.",
    "UniqueID": "Platonymous.CustomFarming",
    "EntryDll": "CustomFarming.dll"
 }
