--- a/HarpOfYobaRedux/manifest.json
+++ b/HarpOfYobaRedux/manifest.json
@@ -7,7 +7,7 @@
       "PatchVersion": 2,
       "Build": ""
    },
-   "Description": "Adds The Harp of Yoba to the game. This is the Version for SDV 1.11 with SMAPI 1.9",
+   "Description": "Adds The Harp of Yoba to the game.",
    "UniqueID": "Platonymous.HarpOfYobaRedux",
    "EntryDll": "HarpOfYobaRedux.dll"
 }
