--- a/PelicanTTS/manifest.json
+++ b/PelicanTTS/manifest.json
@@ -3,11 +3,11 @@
    "Author": "Platonymous",
    "Version": {
       "MajorVersion": 1,
-      "MinorVersion": 5,
-      "PatchVersion": 4,
+      "MinorVersion": 6,
+      "PatchVersion": 0,
       "Build": ""
    },
-   "Description": "Text-To-Speech Mod for Portraiture",
+   "Description": "Text-To-Speech Mod",
    "UniqueID": "Platonymous.PelicanTTS",
    "EntryDll": "PelicanTTS.dll"
 }
