--- a/Portraiture/manifest.json
+++ b/Portraiture/manifest.json
@@ -3,11 +3,11 @@
    "Author": "Platonymous",
    "Version": {
       "MajorVersion": 1,
-      "MinorVersion": 0,
-      "PatchVersion": 4,
+      "MinorVersion": 1,
+      "PatchVersion": 0,
       "Build": ""
    },
-   "Description": "Helper Mod for Portraits. For SDV 1.11.",
+   "Description": "Helper Mod for Portraits.",
    "UniqueID": "Platonymous.Portraiture",
    "EntryDll": "Portraiture.dll"
 }
