--- a/MoreMapLayers/MoreMapLayers.csproj
+++ b/MoreMapLayers/MoreMapLayers.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PropertyIntercept.cs" />
     <None Include="manifest.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
