--- a/Portraiture/Portraiture.csproj
+++ b/Portraiture/Portraiture.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PortraitureBox.cs" />
+    <Compile Include="PConfig.cs" />
     <Compile Include="PortraitureMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextureLoader.cs" />
