--- a/Speedster/Speedster.csproj
+++ b/Speedster/Speedster.csproj
@@ -32,14 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SConfig.cs" />
     <Compile Include="SpeedsterMask.cs" />
     <Compile Include="SpeedsterMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
