--- a/NewMachinesPack/manifest.json
+++ b/NewMachinesPack/manifest.json
@@ -5,7 +5,7 @@
     "MajorVersion": 1,
     "MinorVersion": 0,
     "PatchVersion": 2,
-    "Build": ""
+    "Build": null
   },
   "Description": "Adds new Machines to the game",
   "UniqueID": "Platonymous.MachinePack",
