--- a/CustomFurniture/manifest.json
+++ b/CustomFurniture/manifest.json
@@ -1,13 +1,13 @@
 {
-   "Name": "Custom Furniture",
-   "Author": "Platonymous",
-   "Version": {
-      "MajorVersion": 0,
-      "MinorVersion": 4,
-      "PatchVersion": 0,
-      "Build": ""
-   },
-   "Description": "Helper Mod for Custom Furniture creation.",
-   "UniqueID": "Platonymous.CustomFurniture",
-   "EntryDll": "CustomFurniture.dll"
+  "Name": "Custom Furniture",
+  "Author": "Platonymous",
+  "Version": {
+    "MajorVersion": 0,
+    "MinorVersion": 4,
+    "PatchVersion": 0,
+    "Build": null
+  },
+  "Description": "Helper Mod for Custom Furniture creation.",
+  "UniqueID": "Platonymous.CustomFurniture",
+  "EntryDll": "CustomFurniture.dll"
 }
