--- a/InteractiveMapLayer/manifest.json
+++ b/InteractiveMapLayer/manifest.json
@@ -5,7 +5,7 @@
     "MajorVersion": 0,
     "MinorVersion": 1,
     "PatchVersion": 1,
-    "Build": ""
+    "Build": null
   },
   "Description": "Adds more interactivity to maps",
   "UniqueID": "Platonymous.InteractiveMapLayer",
