--- a/NewBuilding/manifest.json
+++ b/NewBuilding/manifest.json
@@ -5,7 +5,7 @@
     "MajorVersion": 0,
     "MinorVersion": 1,
     "PatchVersion": 1,
-    "Build": ""
+    "Build": null
   },
   "Description": "Test Mod for CEH 1.3 & SMAPI 1.14",
   "UniqueID": "BashNinja.Aquaponics",
