--- a/NoSoilDecayRedux/manifest.json
+++ b/NoSoilDecayRedux/manifest.json
@@ -1,13 +1,13 @@
 {
-   "Name": "No Soil Decay Redux",
-   "Author": "Platonymous",
-   "Version": {
-      "MajorVersion": 1,
-      "MinorVersion": 1,
-      "PatchVersion": 8,
-      "Build": ""
-   },
-   "Description": "Stops soil from decaying",
-   "UniqueID": "Platonymous.NoSoilDecayRedux",
-   "EntryDll": "NoSoilDecayRedux.dll"
+  "Name": "No Soil Decay Redux",
+  "Author": "Platonymous",
+  "Version": {
+    "MajorVersion": 1,
+    "MinorVersion": 1,
+    "PatchVersion": 8,
+    "Build": null
+  },
+  "Description": "Stops soil from decaying",
+  "UniqueID": "Platonymous.NoSoilDecayRedux",
+  "EntryDll": "NoSoilDecayRedux.dll"
 }
