--- a/Portraiture/manifest.json
+++ b/Portraiture/manifest.json
@@ -1,13 +1,13 @@
 {
-   "Name": "Portraiture",
-   "Author": "Platonymous",
-   "Version": {
-      "MajorVersion": 1,
-      "MinorVersion": 2,
-      "PatchVersion": 0,
-      "Build": ""
-   },
-   "Description": "Helper Mod for Portraits.",
-   "UniqueID": "Platonymous.Portraiture",
-   "EntryDll": "Portraiture.dll"
+  "Name": "Portraiture",
+  "Author": "Platonymous",
+  "Version": {
+    "MajorVersion": 1,
+    "MinorVersion": 3,
+    "PatchVersion": 0,
+    "Build": null
+  },
+  "Description": "Helper Mod for Portraits.",
+  "UniqueID": "Platonymous.Portraiture",
+  "EntryDll": "Portraiture.dll"
 }
