--- a/RingOfFire/manifest.json
+++ b/RingOfFire/manifest.json
@@ -1,11 +1,11 @@
 {
   "Name": "Ring Of Fire",
-  "Authour": "Platonymous",
+  "Author": "Platonymous",
   "Version": {
     "MajorVersion": 1,
     "MinorVersion": 0,
     "PatchVersion": 0,
-    "Build": ""
+    "Build": null
   },
   "Description": "Unleash the Flames",
   "UniqueID": "Platonymous.RingOfFire",
