--- a/SeedBag/manifest.json
+++ b/SeedBag/manifest.json
@@ -1,13 +1,13 @@
 {
-   "Name": "Seed Bag",
-   "Author": "Platonymous",
-   "Version": {
-      "MajorVersion": 1,
-      "MinorVersion": 1,
-      "PatchVersion": 1,
-      "Build": ""
-   },
-   "Description": "Adds a Seed Bag to the Game",
-   "UniqueID": "Platonymous.SeedBag",
-   "EntryDll": "SeedBag.dll"
+  "Name": "Seed Bag",
+  "Author": "Platonymous",
+  "Version": {
+    "MajorVersion": 1,
+    "MinorVersion": 1,
+    "PatchVersion": 1,
+    "Build": null
+  },
+  "Description": "Adds a Seed Bag to the Game",
+  "UniqueID": "Platonymous.SeedBag",
+  "EntryDll": "SeedBag.dll"
 }
