--- a/Speedster/manifest.json
+++ b/Speedster/manifest.json
@@ -1,13 +1,13 @@
 {
-   "Name": "Speedster",
-   "Author": "Platonymous",
-   "Version": {
-      "MajorVersion": 1,
-      "MinorVersion": 3,
-      "PatchVersion": 0,
-      "Build": ""
-   },
-   "Description": "To the outside world you are just an ordinary farmer, but secretly...",
-   "UniqueID": "Platonymous.Speedster",
-   "EntryDll": "Speedster.dll"
+  "Name": "Speedster",
+  "Author": "Platonymous",
+  "Version": {
+    "MajorVersion": 1,
+    "MinorVersion": 3,
+    "PatchVersion": 0,
+    "Build": null
+  },
+  "Description": "To the outside world you are just an ordinary farmer, but secretly...",
+  "UniqueID": "Platonymous.Speedster",
+  "EntryDll": "Speedster.dll"
 }
