--- a/RingOfFire/manifest.json
+++ b/RingOfFire/manifest.json
@@ -9,5 +9,10 @@
   },
   "Description": "Unleash the Flames",
   "UniqueID": "Platonymous.RingOfFire",
-  "EntryDll": "RingOfFire.dll"
+  "EntryDll": "RingOfFire.dll",
+  "Dependencies": [
+    {
+      "UniqueID": "Platonymous.CustomElementHandler"
+    }
+  ]
 }
