enable update checks in SMAPI 2.0

--- a/CustomElementHandler/manifest.json
+++ b/CustomElementHandler/manifest.json
@@ -9,5 +9,6 @@
   },
   "Description": "SaveHandler for Custom Objects",
   "UniqueID": "Platonymous.CustomElementHandler",
-  "EntryDll": "CustomElementHandler.dll"
+  "EntryDll": "CustomElementHandler.dll",
+  "UpdateKeys": [ "Nexus:1068" ]
 }
