--- a/PyTK/PyTK.csproj
+++ b/PyTK/PyTK.csproj
@@ -9,10 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PyTK</RootNamespace>
     <AssemblyName>PyTK</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,7 +56,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PyUtils.cs" />
     <Compile Include="Types\ColorManipulation.cs" />
-    <Compile Include="Types\EventConditions.cs" />
     <Compile Include="Types\InventoryItem.cs" />
     <Compile Include="Types\ItemSelector.cs" />
   </ItemGroup>
