--- a/Capitalism/Capitalism.csproj
+++ b/Capitalism/Capitalism.csproj
@@ -58,6 +58,10 @@
       <Name>Harmony</Name>
       <Private>False</Private>
     </ProjectReference>
+    <ProjectReference Include="..\PyTK\PyTK.csproj">
+      <Project>{a8e6272f-a6a1-4bfe-ba8f-021f63596987}</Project>
+      <Name>PyTK</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Visualize\Visualize.csproj">
       <Project>{a9a81f01-58dd-4030-bb82-ae7e71d68d99}</Project>
       <Name>Visualize</Name>
