--- a/PyTK/PyTK.csproj
+++ b/PyTK/PyTK.csproj
@@ -66,9 +66,11 @@
     <Compile Include="Types\ColorManipulation.cs" />
     <Compile Include="Types\ConsoleCommand.cs" />
     <Compile Include="Types\DictionaryEntry.cs" />
+    <Compile Include="Types\IContentPack.cs" />
     <Compile Include="Types\InventoryItem.cs" />
     <Compile Include="Types\Mail.cs" />
     <Compile Include="Types\Range.cs" />
+    <Compile Include="Types\STime.cs" />
     <Compile Include="Types\TerrainSelector.cs" />
     <Compile Include="Types\ItemSelector.cs" />
     <Compile Include="Types\TileAction.cs" />
